<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	  android:stretchColumns="*"
	  android:background="@drawable/green_rect"
	  android:paddingLeft="20dp"
	  android:paddingRight="20dp"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
  
	   <TableRow android:layout_height="wrap_content"
	        android:layout_width="fill_parent">
	       <TextView android:layout_height="wrap_content"
	           android:layout_width="fill_parent"
	           android:layout_marginTop="10dp"
	           android:textSize="18sp"
	           android:textStyle="bold"
	           android:text="@string/questionNum3" />
	   </TableRow>
	   
	   <TableRow android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:paddingBottom="5dp">
	       <TextView android:layout_height="wrap_content"
	           android:layout_width="fill_parent"
	           android:layout_marginTop="12dp"
	           android:layout_marginLeft="8dp"
	           android:textSize="16sp"
	           android:textStyle="bold"
	           android:text="@string/question3" />
	   </TableRow>
    
	   <TableRow android:layout_height="wrap_content"
	        android:layout_width="fill_parent"> 
		     <CheckBox android:id="@+id/check3_1"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content" 
			      android:text="@string/answer3_1" />
	   </TableRow>
	   
	   <TableRow android:layout_height="wrap_content"
	        android:layout_width="fill_parent">  
		     <CheckBox android:id="@+id/check3_2"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content" 
			      android:text="@string/answer3_2" />
	   </TableRow> 
	   
	   <TableRow android:layout_height="wrap_content"
	        android:layout_width="fill_parent"> 
		     <CheckBox android:id="@+id/check3_3"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content" 
			      android:text="@string/answer3_3"/>
	   </TableRow>
	   
	   <TableRow android:layout_height="wrap_content"
	        android:layout_width="fill_parent"> 
		     <CheckBox android:id="@+id/check3_4"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content" 
			      android:text="@string/answer3_4"/>
	   </TableRow>
	
	   <TableRow android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:paddingTop="25dp"
		    android:layout_gravity="center_horizontal">
		    <Button android:id="@+id/btn_save"
		        android:layout_width="0dip"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
		        android:text="@string/save" />
		    <Button android:id="@+id/btn_cancel"
		        android:layout_width="0dip"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
            	android:layout_marginLeft="10dp"
		        android:text="@string/cancel" />
		</TableRow>      

</TableLayout>