<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_2"
        android:layout_width="70sp"
        android:layout_height="50sp"
        android:layout_alignBaseline="@+id/btn_5"
        android:layout_alignBottom="@+id/btn_5"
        android:layout_toLeftOf="@+id/btn_1"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_2"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="70sp"
        android:layout_height="50sp"
        android:layout_below="@+id/btn_1"
        android:layout_toRightOf="@+id/btn_1"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_5"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="70sp"
        android:layout_height="50sp"
        android:layout_alignLeft="@+id/btn_2"
        android:layout_below="@+id/btn_2"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_3"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="70sp"
        android:layout_height="50sp"
        android:layout_alignBaseline="@+id/btn_3"
        android:layout_alignBottom="@+id/btn_3"
        android:layout_alignRight="@+id/btn_5"
        android:layout_marginRight="18dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_4"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="70sp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_1"
        android:textColor="#fff"
        android:onClick="selfDestruct1" />

</RelativeLayout>